change main content

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
   <div role="main">
   	
 	<div>
-		dies ist ein test<br>
-		<a href="#">test test Link</a>
+		dies ist ein weiterer test<br>
+		<a href="#">die ist ein testlink</a>
 	</div>
 
   </div>
